# filter-method

./: CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
dvipy/: __init__.py  core.py
src/: eigene.f90  eigenf.f90  integration.f90  main.f90  matrix.f90  solfer.f90  solver.f90  utils.f90
