[build-system]

requires      = ["setuptools", "wheel", "numpy<2.0"]
build-backend = "setuptools.build_meta"

[project]
name         = "dvipy"
version      = "0.1.0"
description  = "Filter Method for 1D Schrödinger Equation"
dependencies = [
    "numpy<2.0",
    "matplotlib",
]

[tool.setuptools]
packages = ["dvipy"]
